--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,31 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html, body {
+  margin:0;
+  padding: 0;
+  height: 100%;
+  font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
+.background{
+  background-image: url(../images/cinema.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100%;
+}
+
+.index-content{  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10% 0 0 50%;
+}
+.index-content h1{
+  color: aliceblue;
+  font-size: 10rem;
+}
+.index-content a {
   color: #00B7FF;
+  font-size: 3rem;
+  border-radius: 50px;
+  margin-top: 3%;
 }
