--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="background">
+    <div class="index-content">
+        <h1>Cinema <br>Ironhack</h1>
+        <a href="/movies" type="button" class="btn btn-light">Check the movies!</a>
+    </div>
+</div>
+
