--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,18 +1,18 @@
 <div class="detail row">
   <img src="{{movie.image}}" alt="" class="col-3" />
-  <div class="info">
+  <div class="col-6 info">
     <a class="link" href="/movies">Go back</a>
     <h1><b>{{movie.title}}</b></h1>
-    <h4><b>Director: {{movie.director}}</b></h4>
-    <b class="stars">Stars</b>
+    <h3><b>Director: {{movie.director}}</b></h3>
+    <p class="stars"><b>Stars</b></p>
     {{#each movie.stars as |star|}}
       <li>{{star}}</li>
     {{/each}}
     <div class="desc">{{movie.description}}</div>
     <table>
-      <tr>
+      <tr class="showtimes">
         {{#each movie.showtimes as |showtime|}}
-          <th>{{showtime}} |</th>
+          <th>{{showtime}} | </th>
         {{/each}}
       </tr>
     </table>
